# mks-servo-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: test.yml
cmake/: mks_servoConfig.cmake.in
docs/: design.md  scheduler_guide.md  setup_guide.md
examples/: CMakeLists.txt  bench_quarter_turn.cpp  characterize.cpp  hil_auto_calibrate.cpp  hil_auto_clear.cpp  hil_chained_moves.cpp  hil_diagnostics.cpp  hil_drain_timing.cpp  hil_envelope.cpp  hil_inter_move_rest_sweep.cpp  hil_motor_group.cpp  hil_motor_group_n2.cpp  hil_motor_profile_demo.cpp  hil_profile.cpp  hil_scheduler.cpp  hil_scheduler_choreography.cpp  hil_scheduler_n3.cpp  hil_shortest.cpp  hil_single_motor_bench.cpp  hil_soak.cpp  hil_two_motor_sequential_compliant.cpp  hil_voltage_setup.cpp  move_quarter_turn.cpp  read_encoder.cpp  rt_demo.cpp  stress_read.cpp
include/mks_servo/: characterize.hpp  diagnostics.hpp  envelope.hpp  motor.hpp  motor_group.hpp  profile.hpp  protocol.hpp  raw_driver.hpp  rt.hpp  scheduler.hpp  transport.hpp
tests/: CMakeLists.txt  test_envelope_compile.cpp  test_motor.cpp  test_motor_group.cpp  test_protocol.cpp  test_raw_driver_mock.cpp  test_rt.cpp  test_scheduler_mock.cpp  test_transport_compile.cpp
