if(NOT CMAKE_SYSTEM_NAME STREQUAL "Linux")
    message(STATUS "Examples require Linux (termios2); skipping on this platform.")
    return()
endif()

function(mks_example name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE mks_servo::mks_servo)
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang|AppleClang")
        target_compile_options(${name} PRIVATE
            -Wall -Wextra -Wpedantic -Wshadow -Wconversion -Wsign-conversion
        )
        if(MKS_SERVO_WERROR)
            target_compile_options(${name} PRIVATE -Werror)
        endif()
    endif()
endfunction()

mks_example(read_encoder)
mks_example(move_quarter_turn)
mks_example(stress_read)
mks_example(bench_quarter_turn)
mks_example(rt_demo)
mks_example(hil_motor_group)
mks_example(hil_motor_group_n2)
mks_example(hil_soak)
mks_example(hil_chained_moves)
mks_example(characterize)
mks_example(hil_diagnostics)
mks_example(hil_shortest)
mks_example(hil_auto_clear)
mks_example(hil_profile)
mks_example(hil_drain_timing)
mks_example(hil_envelope)
mks_example(hil_auto_calibrate)
mks_example(hil_voltage_setup)
mks_example(hil_scheduler)
target_link_libraries(hil_scheduler PRIVATE pthread)
